Issue #114 : fix question overflow

--- a/src/app/pages/player/assessment/assessment.page.scss
+++ b/src/app/pages/player/assessment/assessment.page.scss
@@ -96,6 +96,10 @@ ion-footer{
     }
   }
 
+  .response{
+    overflow-y: auto;
+  }
+
   .explanation{
     overflow: auto;
     font-size:14px;
